# rust-chat-server

./: .gitignore  Cargo.toml  LICENSE  README.md
comms/: Cargo.toml  README.md
comms/examples/: server_and_client.rs
comms/src/: command.rs  event.rs  lib.rs
comms/src/transport/: client.rs  common.rs  mod.rs  server.rs
comms/tests/: e2e_server_and_client_transport.rs
server/: Cargo.toml  README.md
server/docs/: high-level-architecture.plantuml
server/examples/: stress_test.rs
server/resources/: chat_rooms_metadatas.json
server/src/: main.rs
server/src/room/: chat_room.rs  message_sender.rs  mod.rs  room_participation_list.rs  user_registry.rs  user_session_handle.rs
server/src/room_manager/: mod.rs  room_manager.rs
server/src/room_manager/room/: chat_room.rs  user_registry.rs  user_session_handle.rs
server/src/session/: chat_session.rs  mod.rs  raw_socket.rs  raw_stream.rs  room_manager.rs
tui/: Cargo.toml  README.md
tui/docs/: high-level-architecture.plantuml
tui/src/: main.rs  state.rs  termination.rs  ui.rs
tui/src/app/: action.rs  app.rs  input_box.rs  mod.rs  room_list.rs  shared_state.rs  state.rs  termination.rs  widget_handler.rs
tui/src/app/client/: mod.rs
tui/src/cli/: mod.rs  ui.rs
tui/src/client/: mod.rs  raw_client.rs
tui/src/manager/: chat_page.rs  message_input_box.rs  mod.rs  rendering.rs  room_list.rs  widget_handler.rs
tui/src/state_store/: action.rs  mod.rs  state.rs  state_store.rs
tui/src/ui_management/: chat_page.rs  message_input_box.rs  mod.rs  rendering.rs  room_list.rs  ui_manager.rs  widget_handler.rs
tui/src/ui_management/components/: input_box.rs  mod.rs
tui/src/ui_management/framework/: component.rs  mod.rs  widget_handler.rs
tui/src/ui_management/pages/: mod.rs
tui/src/ui_management/pages/chat_page/: chat_page.rs  mod.rs
tui/src/ui_management/pages/chat_page/components/: message_input_box.rs  mod.rs  room_list.rs
tui/src/ui_management/pages/chat_page/section/: mod.rs  usage.rs
tui/src/ui_management/pages/connect_page/: connect_page.rs  mod.rs
