[package]
name = "comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client = ["serde_json", "tokio", "tokio-stream"]
server = ["serde_json", "tokio", "tokio-stream"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.32.0", default-features = false, features = ["net"], optional = true }
tokio-stream = { version = "0.1.14", default-features = false, features = ["io-util"], optional = true }

[dev-dependencies]
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
