[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
circular-queue = "0.2.6"
comms = { path = "../comms", features = ["client"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
rand = "0.8.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
